# PyAutoSnap

./: .gitignore  README.md  autosnap.py  common.env.example  config.yaml  list_screens.py  logging_config.py  pyproject.toml
src/pyautosnap/: __init__.py  bootstrap.py  config_loader.py  context.py
src/pyautosnap/flows/: __init__.py  auto_snap.py
src/pyautosnap/modules/: __init__.py  monitors.py  screenshot.py  visual_feedback.py
tests/: test_config_loader.py  test_screenshot_settings.py
