[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyautosnap"
version = "0.1.0"
description = "Timed screenshot capture utility."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
